--- a/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
+++ b/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
@@ -40,13 +40,18 @@
                             <br />
                             <br />
                             Trenger du å endre på informasjonen som du allerede har sendt inn, ber vi om at du&nbsp;
-                            <a href="https://www.nav.no/kontaktoss">kontakter oss</a>. Du finner saksbehandlingstiden på <a href="https://www.nav.no/saksbehandlingstider#foreldrepenger">nav.no/saksbehandlingstider#foreldrepenger</a> eller i brev fra Nav.
+                            <a href="https://www.nav.no/kontaktoss">kontakter oss</a>. Du finner saksbehandlingstiden på
+                            <a href="https://www.nav.no/saksbehandlingstider#foreldrepenger"
+                                >nav.no/saksbehandlingstider#foreldrepenger</a
+                            >
+                            eller i brev fra Nav.
                         </p>
                     </template>
                     <template lwc:else>
                         <div class="descholder slds-var-m-bottom_large">
                             <p class="navds-body-short navds-body-short--small blokk-xs description">
-                                For at vi skal kunne vurdere saken på nytt, ber vi om at du fyller ut dette skjemaet. Du blir kontaktet hvis vi trenger flere opplysninger fra deg.
+                                For at vi skal kunne vurdere saken på nytt, ber vi om at du fyller ut dette skjemaet. Du
+                                blir kontaktet hvis vi trenger flere opplysninger fra deg.
                             </p>
                         </div>
                         <div class="text-start addMargin navds-form-field navds-form-field--medium">
