--- a/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
+++ b/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
@@ -40,9 +40,9 @@
                             <br />
                             <br />
                             Trenger du å endre på informasjonen som du allerede har sendt inn, ber vi om at du&nbsp;
-                            <a href="https://www.nav.no/kontaktoss">kontakter oss</a>. Du finner saksbehandlingstiden på
+                            <a href="https://www.nav.no/kontaktoss">kontakter oss</a>. Du finner 
                             <a href="https://www.nav.no/saksbehandlingstider#foreldrepenger"
-                                >nav.no/saksbehandlingstider#foreldrepenger</a
+                                >saksbehandlingstiden på nav.no</a
                             >
                             eller i brev fra Nav.
                         </p>
