--- a/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
+++ b/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
@@ -40,11 +40,11 @@
                             <br />
                             <br />
                             Trenger du å endre på informasjonen som du allerede har sendt inn, ber vi om at du&nbsp;
-                            <a href="https://www.nav.no/kontaktoss">kontakter oss</a>. Du finner
+                            <a href="https://www.nav.no/kontaktoss">kontakter oss</a>. Du finner&nbsp;
                             <a href="https://www.nav.no/saksbehandlingstider#foreldrepenger"
                                 >saksbehandlingstiden på nav.no</a
                             >
-                            eller i brev fra Nav.
+                            &nbsp;eller i brev fra Nav.
                         </p>
                     </template>
                     <template lwc:else>
