--- a/force-app/main/default/lwc/communityExpandablePanel/communityExpandablePanel.html
+++ b/force-app/main/default/lwc/communityExpandablePanel/communityExpandablePanel.html
@@ -1,49 +1,48 @@
 <template>
-    <div class={accordianClass}>
-        <button onclick={togglevisible} class="navds-accordion__header" type="button" aria-expanded={showpanel}>
-            <span class="navds-accordion__header-content navds-heading navds-heading--small">{header}</span
-            ><svg
-                width="1em"
-                height="1em"
-                viewBox="0 0 24 24"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-                focusable="false"
-                role="img"
-                aria-hidden="true"
-                class="navds-accordion__expand-icon"
-            >
-                <path
-                    fill-rule="evenodd"
-                    clip-rule="evenodd"
-                    d="M12 17.414 4.293 9.707l1.414-1.414L12 14.586l6.293-6.293 1.414 1.414L12 17.414Z"
-                    fill="currentColor"
-                ></path></svg
-            ><svg
-                width="1em"
-                height="1em"
-                viewBox="0 0 24 24"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-                focusable="false"
-                role="img"
-                aria-hidden="true"
-                class="navds-accordion__expand-icon navds-accordion__expand-icon--filled"
-            >
-                <path
-                    fill-rule="evenodd"
-                    clip-rule="evenodd"
-                    d="m12 18.121-8.06-8.06 2.12-2.122L12 13.88l5.94-5.94 2.12 2.122L12 18.12Z"
-                    fill="currentColor"
-                ></path>
-            </svg>
-        </button>
-        <div class="expand-animation" style="height: 0px">
-            <div class="dropdown" aria-hidden={inverseShowpanel} style="display: none">
-                <div class="navds-accordion__content navds-body-long">
-                    <lightning-formatted-rich-text value={body}></lightning-formatted-rich-text>
+    <div class={containerStyle}>
+        <div
+            class={panelHeaderClass}
+            role="button"
+            tabindex="0"
+            aria-expanded={isExpanded}
+            onclick={toggleExpand}
+            onkeydown={handleKeydown}
+        >
+            <template lwc:if={simple}>
+                <div class="panel-simple slds-grid slds-grid_align-spread">
+                    <span class="slds-icon_container slds-p-right_xx-small">
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 26 26"
+                            class={chevronClass}
+                            aria-hidden="true"
+                        >
+                            <path
+                                d="M20.4769 11.1613L13.3808 18.3267C13.1731 18.5343 12.8269 18.5343 12.6192 18.3267L5.52308 11.1613C5.31539 10.9536 5.31539 10.6074 5.52308 10.3997L6.28462 9.63819C6.49231 9.4305 6.83846 9.4305 7.04616 9.63819L12.6192 15.2805C12.8269 15.4882 13.1731 15.4882 13.3808 15.2805L18.9538 9.67281C19.1615 9.46511 19.5077 9.46511 19.7154 9.67281L20.4769 10.4343C20.65 10.642 20.65 10.9536 20.4769 11.1613Z"
+                                class={chevronIconClass}
+                            />
+                        </svg>
+                    </span>
+                    <h3 class="title">{title}</h3>
                 </div>
-            </div>
+            </template>
+            <template lwc:else>
+                <span class="slds-icon_container slds-p-right_small">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 26 26" class={chevronClass} aria-hidden="true">
+                        <rect width="26" height="26" rx="10" class="custom-icon-background" />
+                        <path
+                            d="M20.4769 11.1613L13.3808 18.3267C13.1731 18.5343 12.8269 18.5343 12.6192 18.3267L5.52308 11.1613C5.31539 10.9536 5.31539 10.6074 5.52308 10.3997L6.28462 9.63819C6.49231 9.4305 6.83846 9.4305 7.04616 9.63819L12.6192 15.2805C12.8269 15.4882 13.1731 15.4882 13.3808 15.2805L18.9538 9.67281C19.1615 9.46511 19.5077 9.46511 19.7154 9.67281L20.4769 10.4343C20.65 10.642 20.65 10.9536 20.4769 11.1613Z"
+                            class={chevronIconClass}
+                        />
+                    </svg>
+                </span>
+                <h3 class="title">{title}</h3>
+            </template>
         </div>
+        <template lwc:if={isExpanded}>
+            <div class={panelBodyClass}>
+                <slot></slot>
+            </div>
+        </template>
     </div>
 </template>
