--- a/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.html
+++ b/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.html
@@ -1,19 +1,18 @@
 <template>
     <div class="top-div">
         <div>
-            <div class="header">
-                <h1 class="navds-heading navds-heading--2xlarge">{title}</h1>
-            </div>
-            <div class="text-center">
-                <img aria-hidden="true" src={logopath} class="logo" />
-                <h2 class="navds-labels blokk-s theme-header">{themeToShow}</h2>
+            <div class="text-left">
+                <p class="slds-text-color_weak">{title}</p>
+                <div class="header">
+                    <h1 class="navds-heading navds-heading--2xlarge">{themeToShow}</h1>
+                </div>
                 <c-community-error-summary
                     error-list={errorList}
                     onclickedevent={handleErrorClick}
                     class="errorSummary"
                 >
                 </c-community-error-summary>
-                <div class="descholder slds-var-m-bottom_xx-large ingress">
+                <div class="descholder slds-var-m-bottom_large ingress">
                     <lightning-formatted-rich-text
                         class="navds-body-short navds-body-short--small blokk-xs description"
                         value={ingressLabel}
@@ -23,11 +22,12 @@
                     <template if:false={showspinner}>
                         <div class="navds-accordion leftAlign">
                             <template for:each={newsList} for:item="news">
-                                <c-community-expandable-panel
-                                    header={news.header}
-                                    body={news.body}
-                                    key={news.id}
-                                ></c-community-expandable-panel>
+                                <c-community-expandable-panel title={news.header} key={news.id}>
+                                    <lightning-formatted-rich-text
+                                        class="navds-body-short navds-body-short--small blokk-xs description"
+                                        value={news.body}
+                                    ></lightning-formatted-rich-text>
+                                </c-community-expandable-panel>
                             </template>
                         </div>
                         <template if:true={showOpenThreadWarning}>
@@ -55,11 +55,11 @@
                             <!-- Textarea -->
                             <template lwc:if={showInputTextArea}>
                                 <div class="slds-var-m-top_xx-large">
-                                    <c-community-textarea
+                                    <c-community-textarea-delete
                                         max-length={maxLength}
                                         class="inputTextbox"
                                         ontextchanged={handleTextChange}
-                                    ></c-community-textarea>
+                                    ></c-community-textarea-delete>
                                 </div>
                             </template>
                             <template lwc:else>
@@ -74,14 +74,24 @@
                                     options={medskrivOptions}
                                     class="radioFocus medskrive"
                                     onradiochange={handleRadioChange}
-                                    ><div slot="legend" class="slds-grid">
+                                >
+                                    <div slot="legend" class="slds-grid">
                                         <p>Godtar du at vi kan bruke samtalen din til opplæring av veiledere i Nav?</p>
-                                        <c-ds-help-text
-                                            class="helptext"
-                                            title="Hva betyr dette?"
-                                            text="For å lære opp nye veiledere og utvikle oss kan vi noen ganger være to personer som ser og svarer på meldingen din. Personen som ser samtalen på grunn av opplæring eller utvikling har også taushetsplikt."
-                                        ></c-ds-help-text></div
-                                ></c-ds-radio>
+                                    </div></c-ds-radio
+                                >
+                                <div class="slds-p-top_small slds-p-bottom_large">
+                                    <c-community-expandable-panel
+                                        title="Grunnen til at vi spør om samtykke til opplæring  "
+                                        simple
+                                    >
+                                        <lightning-formatted-rich-text
+                                            class="navds-body-short navds-body-short--small blokk-xs description"
+                                            value="For å lære opp nye veiledere og utvikle oss kan vi noen ganger være to
+                                            personer som ser og svarer på meldingen din. Personen som ser samtalen på
+                                            grunn av opplæring eller utvikling har også taushetsplikt."
+                                        ></lightning-formatted-rich-text>
+                                    </c-community-expandable-panel>
+                                </div>
                             </div>
                             <!-- Vilkaer checkbox -->
                             <div class="skjemaelement checkbox">
@@ -90,11 +100,7 @@
                                     oncheckedchanged={handleChecked}
                                     class="checkboxContainer"
                                 ></c-community-checkbox
-                                ><button
-                                    onclick={showTerms}
-                                    class="slds-var-m-left_small vilkar-link navds-link focusBtn"
-                                    tabindex="0"
-                                >
+                                ><button onclick={showTerms} class="vilkar-link navds-link focusBtn" tabindex="0">
                                     {label.showtermstext}
                                 </button>
                             </div>
@@ -105,7 +111,7 @@
                                 aria-disabled="false"
                                 onclick={submitRequest}
                             >
-                                Send
+                                Send beskjed
                             </button>
                         </template>
                         <template if:false={showTextArea}>
