Functionality for setting reserved cases to in progress

--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
@@ -50,6 +50,8 @@
             onclosedevent={handleClosed}
             new-design
             is-thread={isThread}
+            is-case-reserved={isCaseReserved}
+            onsetcasetoinprogress={handleSetCaseToInProgress}
         >
             <div slot="buttonContainer">
                 <lightning-layout class="slds-float_right button-container">
