--- a/force-app/main/default/lwc/crmStoMessaging/newDesignTemplate.html
+++ b/force-app/main/default/lwc/crmStoMessaging/newDesignTemplate.html
@@ -20,6 +20,8 @@
         new-design
         is-thread={isThread}
         onclosedevent={forwardEvent}
+        is-case-reserved={isCaseReserved}
+        onsetcasetoinprogress={handleSetCaseToInProgress}
     >
         <template lwc:if={showMedskrivBlocker}>
             <div slot="messages">
