Adding changes to enligh button for new design

--- a/force-app/main/default/lwc/crmStoMessaging/newDesignTemplate.html
+++ b/force-app/main/default/lwc/crmStoMessaging/newDesignTemplate.html
@@ -13,6 +13,7 @@
         show-close={showClose}
         english-text-template={englishTextTemplate}
         onenglisheventtwo={handleEnglishEventTwo}
+        show-language-change-modal={showLanguageChangeModal}
         class={computeClasses}
         show-quick
         submit-button-label={submitButtonLabel}
