--- a/force-app/main/default/lwc/threadExpandedTimeline/threadExpandedTimeline.html
+++ b/force-app/main/default/lwc/threadExpandedTimeline/threadExpandedTimeline.html
@@ -7,12 +7,12 @@
             </template>
         </template>
     </section>
-    <div class="button-padding">
-        <c-nks-button
-            button-label="Behandle henvendelse"
-            onbuttonclick={openRecord}
-            is-link
-            standard-length
-        ></c-nks-button>
+    <div class="button-container">
+        <div class="button-padding">
+            <c-nks-button button-label="Behandle henvendelse" onclick={openRecord} is-link standard-length></c-nks-button>
+        </div>
+        <div class="button-padding">
+            <c-nks-button button-styling="secondary" class="slds-button_outline-brand" button-label="Utskrift" onclick={handlePrint} is-link standard-length></c-nks-button>
+        </div>
     </div>
 </template>
