--- a/force-app/main/default/lwc/threadExpandedTimeline/threadExpandedTimeline.html
+++ b/force-app/main/default/lwc/threadExpandedTimeline/threadExpandedTimeline.html
@@ -9,10 +9,22 @@
     </section>
     <div class="button-container">
         <div class="button-padding">
-            <c-nks-button button-label="Behandle henvendelse" onclick={openRecord} is-link standard-length></c-nks-button>
+            <c-nks-button
+                button-label="Behandle henvendelse"
+                onclick={openRecord}
+                is-link
+                standard-length
+            ></c-nks-button>
         </div>
         <div class="button-padding">
-            <c-nks-button button-styling="secondary" class="slds-button_outline-brand" button-label="Utskrift" onclick={handlePrint} is-link standard-length></c-nks-button>
+            <c-nks-button
+                button-styling="secondary"
+                class="slds-button_outline-brand"
+                button-label="Utskrift"
+                onclick={handlePrint}
+                is-link
+                standard-length
+            ></c-nks-button>
         </div>
     </div>
 </template>
