Revert "Fix button click"

--- a/force-app/main/default/lwc/threadExpandedTimeline/threadExpandedTimeline.html
+++ b/force-app/main/default/lwc/threadExpandedTimeline/threadExpandedTimeline.html
@@ -8,11 +8,6 @@
         </template>
     </section>
     <div class="button-padding">
-        <c-nks-button
-            button-label="Behandle henvendelse"
-            onbuttonclick={openRecord}
-            is-link
-            standard-length
-        ></c-nks-button>
+        <c-nks-button button-label="Behandle henvendelse" onclick={openRecord} is-link standard-length></c-nks-button>
     </div>
 </template>
