--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
@@ -12,7 +12,7 @@
                         >
                             <c-nks-button
                                 class="top-button"
-                                onbuttonclick={config.onclick}
+                                onclick={config.onclick}
                                 disabled={config.disabled}
                                 aria-expanded={config.expanded}
                                 button-label={config.label}
@@ -60,7 +60,7 @@
                             <c-nks-button
                                 button-label={config.label}
                                 button-styling="secondary"
-                                onbuttonclick={config.onclick}
+                                onclick={config.onclick}
                                 aria-expanded={config.expanded}
                                 element-data-id={config.id}
                                 full-height
