replaced button component with normal html buttons

--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
@@ -10,14 +10,16 @@
                             key={config.id}
                             class="slds-size_4-of-12 slds-var-p-right_medium flow-button"
                         >
-                            <c-nks-button
-                                class="top-button"
+                            <button
+                                class="slds-button slds-button_brand button-spacing slds-button_stretch button-heights top-button"
+                                type="button"
                                 onclick={config.onclick}
+                                title={config.label}
                                 disabled={config.disabled}
                                 aria-expanded={config.expanded}
-                                button-label={config.label}
-                                full-height
-                            ></c-nks-button>
+                            >
+                                {config.label}
+                            </button>
                         </lightning-layout-item>
                     </template>
                 </lightning-layout>
@@ -57,14 +59,16 @@
                 <lightning-layout class="slds-float_right button-container">
                     <template for:each={bottomButtonConfigs} for:item="config">
                         <lightning-layout-item key={config.id} data-expanded={config.expanded}>
-                            <c-nks-button
-                                button-label={config.label}
-                                button-styling="secondary"
+                            <button
+                                class="slds-button slds-button_outline-brand button-spacing button-heights"
+                                type="button"
                                 onclick={config.onclick}
+                                title={config.label}
                                 aria-expanded={config.expanded}
                                 element-data-id={config.id}
-                                full-height
-                            ></c-nks-button>
+                            >
+                                {config.label}
+                            </button>
                         </lightning-layout-item>
                     </template>
                 </lightning-layout>
