--- a/force-app/main/default/lwc/threadExpandedTimeline/threadExpandedTimeline.html
+++ b/force-app/main/default/lwc/threadExpandedTimeline/threadExpandedTimeline.html
@@ -10,7 +10,7 @@
     <div class="button-padding">
         <div>
             <a
-                class="slds-button slds-button_brand button-spacing"
+                class="slds-button slds-button_brand"
                 type="submit"
                 title="Behandle henvendelse"
                 onclick={openRecord}
