--- a/force-app/main/default/lwc/communityCheckbox/communityCheckbox.html
+++ b/force-app/main/default/lwc/communityCheckbox/communityCheckbox.html
@@ -12,7 +12,18 @@
             onfocusout={checkError}
         /><label class="navds-checkbox__label" for="checkbox">{labelText}</label>
         <template if:true={error}>
-            <div class="navds-error-message navds-error-message--medium navds-label">Du må godta vilkårene</div>
+            <div class="navds-error-message navds-error-message--medium navds-label">
+                <div class="slds-grid slds-p-bottom_small">
+                    <lightning-icon
+                        icon-name="utility:warning"
+                        size="x-small"
+                        variant="error"
+                        class="slds-p-right_xx-small"
+                    >
+                    </lightning-icon
+                    >Du må godta vilkårene
+                </div>
+            </div>
         </template>
     </div>
 </template>
