--- a/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.html
+++ b/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.html
@@ -67,7 +67,7 @@
                             </template>
 
                             <!-- Medskriv radiobutton -->
-                            <div>
+                            <div class="slds-p-top_large">
                                 <c-ds-radio
                                     lwc:ref="medskrivRadiobuttons"
                                     title="Godtar du at vi kan bruke samtalen din til opplæring av veiledere i Nav?"
