--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
@@ -63,7 +63,7 @@
                                 onclick={config.onclick}
                                 title={config.label}
                                 aria-expanded={config.expanded}
-                                element-data-id={config.id}
+                                data-id={config.id}
                             >
                                 {config.label}
                             </button>
